fix: resolve major test compilation errors and DTO structure mismatches
- Fix UserProfileResponse field types (followersCount, followingCount, travelPlansCount to Long)
- Fix TravelPlanStatus enum usage (PUBLISHED → CONFIRMED)
- Fix VideoStatus enum usage (PUBLISHED → COMPLETED, DRAFT → UPLOADING)
- Fix ItineraryItem time field types (LocalTime → LocalDateTime)
- Fix Video entity field name (duration → durationSeconds)
- Fix Place entity field name (imageUrls → images)
- Remove invalid entity builder fields (createdAt, updatedAt for entities extending BaseEntity)
- Fix Java 8+ stream collection (toList() → collect(Collectors.toList()))
- Remove non-existent entity fields (amenities from Place)
- Partially fix SavedPlan repository method references in tests

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>